[metadata]
name = ytzrec
version = attr: ytzrec.__version__
author = Paul Wexler
author_email = paul.e.wexler@gmail.com
url = https://github.com/paulwexler/ytzrec/
description = Model a databse record. Protect against mis-spelling keys.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms  =  POSIX, Linux
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Software Development
    Topic :: Utilities

[options]
python_requires = >=3.6
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

setup_requires = setuptools
tests_require =
    pylint
    pytest
    coverage
